--- a/pages/apply/mine/my-collect/my-collect.wxml
+++ b/pages/apply/mine/my-collect/my-collect.wxml
@@ -1,39 +1,52 @@
-<wu-loading id="wu-loading" title="加载中..." />
 <wxs src="./my-collect.wxs" module="moduleMyCollect" />
+
+<wu-navigation id="wu-navigation" title="我的收藏"></wu-navigation>
 
 <view class="container">
 
-  <wu-navigation id="wu-navigation" title="我的收藏"></wu-navigation>
-
   <view class="collect-type">
     <view class="_insert">
-      <block wx:for="{{favorType}}" wx:key="{{index}}">
-        <text catchtap="changeTypeEvent" class="{{current===index?'active':''}}" data-code="{{item.ObjectCode}}" data-index="{{index}}">{{item.ObjectName}}</text>
+      <block wx:for="{{favorType}}" wx:key="detail_id">
+        <text catchtap="__turnPageTabChangeMultiple"
+              class="{{contentMultipleCurrent===index?'active':''}}"
+              data-index="{{index}}">{{item.caption}}</text>
       </block>
     </view>
   </view>
 
   <view class="collect-con">
 
-    <view wx:if="{{favors.list.length>0}}">
-      <navigator url="{{moduleMyCollect.changeURL(item.DataID, item.DataType, item.Format)}}" class="collect-listSingle" wx:for="{{favors.list}}" wx:key="{{item.DataID}}">
+    <view wx:if="{{contentMultiple.list.length>0}}">
+
+      <navigator url="{{moduleMyCollect.changeURL(item.data_id, item.data_type, item.format)}}"
+                 class="collect-listSingle"
+                 wx:for="{{contentMultiple.list}}"
+                 wx:key="favor_id">
         <view class="clear collect-listSingle-h">
           <view class="_img">
-            <image src="{{item.CoverURL}}" mode="aspectFill" lazy-load></image>
+            <image src="{{item.cover_url}}" mode="aspectFill" lazy-load></image>
           </view>
           <view class="_del">
-            <text class="_name">{{item.Name}}</text>
-            <view class="_desc">{{item.Desc}}</view>
+            <text class="_name">{{item.name}}</text>
+            <view class="_desc">{{item.desc}}</view>
           </view>
         </view>
+
         <view class="flex between mt-10" catchtap="true">
-          <text class="_time">{{moduleMyCollect.resolveTime(item.AddTime)}}</text>
-          <view class="pl-15 pt-10 pr-15 pb-10 color-999" hover-class="event-hover-class-view" bindtap="cancelCollectEvent" data-id="{{item.DataID}}" data-index="{{index}}" data-type="{{item.DataType}}">
+          <text class="_time">{{moduleMyCollect.resolveTime(item.add_time)}}</text>
+          <view class="pl-15 pt-10 pr-15 pb-10 color-999"
+                hover-class="basic-hover"
+                bindtap="cancelCollectEvent"
+                data-id="{{item.data_id}}"
+                data-index="{{index}}"
+                data-type="{{item.data_type}}">
             <text class="iconfont icon-del"></text>
           </view>
         </view>
+
       </navigator>
-      <view class="nomore" wx:if="{{pager.lastPage}}">额，数据到底了</view>
+      <view class="nomore" wx:if="{{contentMultiple.lastPage}}">额，数据到底了</view>
+
     </view>
     <view wx:else class="nodate">额，此目录没有数据哟</view>
 
