--- a/pages/apply/mine/my-record/my-record.wxml
+++ b/pages/apply/mine/my-record/my-record.wxml
@@ -1,13 +1,13 @@
-<wu-loading id="wu-loading" title="加载中..." />
+
 <wxs src="./my-record.wxs" module="moduleMyRecord" />
 <wu-marked-words id="wu-marked-words"
                  words="{{markedWords.data}}"
                  version="{{markedWords.version}}"
-                 exhibition="{{record.list.length>0?true:false}}" bindmarkDownFree="markDownFreeEvent"/>
+                 exhibition="{{content.list.length>0?true:false}}" bindmarkDownFree="markDownFreeEvent"/>
 
 <view class="container">
 
-    <wu-navigation id="wu-navigation" title="{{nav.title}}({{record.totalRow}})"
+    <wu-navigation id="wu-navigation" title="{{nav.title}}({{content.totalRow}})"
                    backURLType="{{nav.backURLType}}"
                    backURL="{{nav.backURL}}"
                    transparent="{{nav.transparent}}"
@@ -19,34 +19,34 @@
         <text class="iconfont icon-dianji"></text>
     </view>
 
-    <view wx:if="{{record.list.length>0}}" class="mine-userRecord-box">
+    <view wx:if="{{content.list.length>0}}" class="mine-userRecord-box">
     <view>
-      <view wx:for="{{record.list}}" wx:key="{{item.RecordID}}" class="mine-userRecord-single {{tryParams.isPlay && tryParams.id === item.RecordID?'active':''}}" >
+      <view wx:for="{{content.list}}" wx:key="record_id" class="mine-userRecord-single {{tryParams.isPlay && tryParams.id === item.record_id?'active':''}}" >
 
-        <view class="_insert" bindtap="tryListenEvent" data-index="{{index}}">
+        <view class="_insert" bindtap="tryListenEvent" data-id="{{item.record_id}}" data-url="{{item.file_url}}">
 
             <view class="_linkto">
-              <view class="_name">{{item.Name}}</view>
-              <view class="_desc">{{item.Desc}}</view>
+              <view class="_name">{{item.name}}</view>
+              <view class="_desc">{{item.desc}}</view>
             </view>
 
             <!--未公开-->
-            <view class="mine-userRecord-single-crile" wx:if="{{item.blnPublic ===0 }}">
-              <image src="{{item.CoverURL}}" mode="aspectFill" lazy-load class="_image {{tryParams.isPlay && tryParams.id === item.RecordID?'active':''}}"></image>
-              <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.RecordID}}"></text>
+            <view class="mine-userRecord-single-crile" wx:if="{{item.bln_public === 0 }}">
+              <image src="{{item.cover_url}}" mode="aspectFill" lazy-load class="_image {{tryParams.isPlay && tryParams.id === item.record_id?'active':''}}"></image>
+              <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.record_id}}"></text>
               <text class="iconfont icon-weibiaoti519" wx:else></text>
             </view>
             <view class="bs-single" wx:else>
               <view class="_insert">
-                <view class="_image {{tryParams.isPlay && tryParams.id === item.RecordID?'active':''}}">
-                  <view><image src="{{item.CoverURL}}" mode="aspectFill" lazy-load/></view>
-                  <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.RecordID}}"></text>
+                <view class="_image {{tryParams.isPlay && tryParams.id === item.record_id?'active':''}}">
+                  <view><image src="{{item.cover_url}}" mode="aspectFill" lazy-load/></view>
+                  <text class="iconfont icon-bofang" wx:if="{{!tryParams.isPlay || tryParams.id !== item.record_id}}"></text>
                   <text class="iconfont icon-weibiaoti519" wx:else></text>
                 </view>
               </view>
             </view>
 
-            <view class="_time"><text>{{moduleMyRecord.resolveTime(item.AddTime)}}</text></view>
+            <view class="_time"><text>{{moduleMyRecord.resolveTime(item.add_time)}}</text></view>
         </view>
 
 
@@ -55,37 +55,43 @@
             <view class="flex between">
                 <view class="mr-evaluating">
                     <view class="flex _l {{index===0 && markedWords.data[0].show?'MarkDown':''}}" id="{{index===0?'MarkDown01':''}}">
-                        <wu-switch name="positive" slot="footer" color="balanced" size="small" value="{{item.blnPublic===0?false:true}}" bind:change="setPublicSwitchEvent" data-index="{{index}}"/>
-                        <text class="_k ml-10" wx:if="{{item.blnPublic===0}}">TA人不可见</text>
+                        <wux-switch name="positive" slot="footer" size="small" color="balanced" value="{{item.bln_public===0?false:true}}" bind:change="setPublicSwitchEvent"  data-index="{{index}}"/>
+                        <text class="_k ml-10" wx:if="{{item.bln_public===0}}">TA人不可见</text>
                         <text class="_k _c ml-10" wx:else>TA人可见</text>
                     </view>
                 </view>
                 <view class="mine-userRecord-count flex">
                     <view class="_s _eye">
-                        <view>{{moduleMyRecord.filterTime(item.Duration)}}</view>
+                        <view>{{moduleMyRecord.filterTime(item.duration)}}</view>
                     </view>
                     <view class="_s _eye">
                         <view wx:if="{{item.mode === 1}}" class="flex"><text class="iconfont icon-biyan mr-5"></text><text>背诵</text></view>
                         <view wx:else class="flex"><text class="iconfont icon-yanjing mr-5"></text><text>朗诵</text></view>
                     </view>
-                    <!--<view class="_s"><text class="iconfont icon-zan"></text><text class="ml-5">{{item.likeCount}}</text></view>-->
-                    <!--<view class="_s"><text class="_font">{{item.viewCount}}次浏览</text></view>-->
+                    <!--<view class="_s"><text class="iconfont icon-zan"></text><text class="ml-5">{{item.like_count}}</text></view>-->
+                    <!--<view class="_s"><text class="_font">{{item.view_count}}次浏览</text></view>-->
                 </view>
             </view>
 
             <view class="_oper">
               <view class="_d {{index===0 && markedWords.data[1].show?'MarkDown':''}}" id="{{index===0?'MarkDown02':''}}">
-                <view bindtap="deleteRecordEvent" data-index="{{index}}" class="_s" hover-class="event-hover-class-view"><text class="iconfont icon-del"></text><text>删除</text></view>
-                <view bindtap="addStudyGroupEvent" data-index="{{index}}" class="_s" hover-class="event-hover-class-view"><text class="iconfont icon-xuexi"></text><text>小组</text></view>
-                <!--<view wx:if="{{item.blnPublic===1}}" class="shareBtn event-hover-class _s" bindtap="singleShareEvent" data-index="{{index}}"><text class="iconfont icon-chakantiezifenxiang"></text></view>-->
-                <navigator class="_s " url="/pages/apply/course/lesson-play/lesson-play?id={{item.DataID}}" hover-class="navigator-hover-class"><text class="iconfont icon-Group-"></text><text>范读</text></navigator>
+                <view catchtap="deleteRecordEvent" data-index="{{index}}" data-id="{{item.record_id}}" class="_s" hover-class="basic-hover">
+                    <text class="iconfont icon-del"></text><text>删除</text>
+                </view>
+                <view catchtap="addStudyGroupEvent" data-index="{{index}}" data-id="{{item.record_id}}" class="_s" hover-class="basic-hover">
+                    <text class="iconfont icon-xuexi"></text><text>小组</text>
+                </view>
+                <!--<view wx:if="{{item.bln_public===1}}" class="shareBtn event-hover-class _s" bindtap="singleShareEvent" data-index="{{index}}"><text class="iconfont icon-chakantiezifenxiang"></text></view>-->
+                <view catchtap="goLessonPlay" data-id="{{item.data_id}}" class="_s " hover-class="basic-hover">
+                    <text class="iconfont icon-Group-"></text><text>范读</text>
+                </view>
               </view>
             </view>
 
         </view>
       </view>
     </view>
-    <view class="nomore" wx:if="{{record.lastPage}}">额，数据到底了</view>
+    <view class="nomore" wx:if="{{content.lastPage}}">额，数据到底了</view>
     </view>
     <view wx:else class="nodate">额，此目录没有数据哟</view>
 
