--- a/pages/apply/mine/my-record/my-record.wxs
+++ b/pages/apply/mine/my-record/my-record.wxs
@@ -1,4 +1,7 @@
-var resolveTime = function (time, full) {
+var resolveTime = function (time) {
+    if (!time) {
+        return ''
+    }
     var exp = getRegExp('-', 'g')
     var temp = time.replace(exp, '/')
     var d = getDate(temp)
@@ -16,9 +19,16 @@ var resolveTime = function (time, full) {
     }
 
     if (getRegExp('').exec(time) == null) {
+        if (d.getFullYear() < now.getFullYear()) {
+            return d.getFullYear() + '年' + (d.getMonth() + 1) + '月' + d.getDate() + '日 '
+        }
         return (d.getMonth() + 1) + '月' + d.getDate() + '日 '
+    }else {
+        if (d.getFullYear() < now.getFullYear()) {
+            return d.getFullYear() + '年' + (d.getMonth() + 1) + '月' + d.getDate() + '日 ' + setDecimals(d.getHours()) + ':' + setDecimals(d.getMinutes())
+        }
+        return (d.getMonth() + 1) + '月' + d.getDate() + '日 ' + setDecimals(d.getHours()) + ':' + setDecimals(d.getMinutes())
     }
-    return (d.getMonth() + 1) + '月' + d.getDate() + '日 ' + setDecimals(d.getHours()) + ':' + setDecimals(d.getMinutes())
 }
 
 var setDecimals = function (val) {
