--- a/pages/apply/mine/user-page/user-page.wxml
+++ b/pages/apply/mine/user-page/user-page.wxml
@@ -1,5 +1,3 @@
-<wu-loading id="wu-loading"></wu-loading>
-<wu-toast id="wu-toast"></wu-toast>
 <wxs src="./user-page.wxs" module="moduleUserPage" />
 
 <view class="container">
@@ -9,7 +7,7 @@
   <view class="master-backimg">
     <image src="{{moduleUserPage.changeURL(info.data.ZoneBgURL, info.data.avatar_url)}}" mode="aspectFill"></image>
   </view>
-  <scroll-view scroll-y class="master-scroll" bindscrolltolower="scrolltolowerEvent">
+  <scroll-view scroll-y class="master-scroll" bindscrolltolower="scrollToLowerEvent">
 
     <view class="master-scroll-box">
 
@@ -44,6 +42,7 @@
           <text class="{{current === 0 ?'active':''}}" catchtap="detailChangeEvent" data-index="0">TA的作品</text>
           <text class="{{current === 1 ?'active':''}}" catchtap="detailChangeEvent" data-index="1">TA的课程</text>
         </view>
+
         <view class="_title _s" wx:if="{{info.data.RoleID === 3}}">
           <text class="active">TA的作品</text>
         </view>
@@ -108,6 +107,4 @@
     </view>
 
   </scroll-view>
-
 </view>
-  
