--- a/pages/apply/teams/team-set/team-set.wxml
+++ b/pages/apply/teams/team-set/team-set.wxml
@@ -11,7 +11,7 @@
 
   <view>
 
-    <view class="set-single flex between" hover-class="event-hover-class-view" bindtap="openAttestationEvent">
+    <view class="set-single flex between" hover-class="basic-hover" bindtap="openAttestationEvent">
       <text>我在本组的昵称</text>
       <view class="_r">
         <text>{{attestation.temp}}</text>
@@ -25,7 +25,7 @@
       </view>
     </view>
 
-    <!--<view class="set-single flex between" hover-class="event-hover-class-view" bindtap="openStatisticalEvent" wx:if="{{isCreator === 'true'}}">
+    <!--<view class="set-single flex between" hover-class="basic-hover" bindtap="openStatisticalEvent" wx:if="{{isCreator === 'true'}}">
       <text>组数据管理</text>
     </view>-->
 
@@ -48,8 +48,8 @@
       <input placeholder="李白晚辈" class="_input" focus="{{attestation.focus}}" bindinput="attestationSubEvent" bindconfirm="attestationSubEvent" value="{{attestation.inp}}"/>
     </view>
     <view class="mt-15 _link flex around">
-      <text catchtap="closeAttestationEvent" hover-class="event-hover-class-view">取消</text>
-      <text catchtap="subAttestationEvent" class="color-Primary" hover-class="event-hover-class-view">修改</text>
+      <text catchtap="closeAttestationEvent" hover-class="basic-hover">取消</text>
+      <text catchtap="subAttestationEvent" class="color-Primary" hover-class="basic-hover">修改</text>
     </view>
   </view>
 </wu-animation-group>
